--- a/src/input.css
+++ b/src/input.css
@@ -7,6 +7,7 @@
   --breakpoint-m: 1024px;
   --breakpoint-l: 1200px;
   --breakpoint-xl: 1260px;
+  --color-main: #000;
+  --color-yellow: #ffd301;
 }
-
 
