--- a/src/font.css
+++ b/src/font.css
@@ -1,7 +1,7 @@
-/* @font-face {
+@font-face {
   font-family: 'Fira_Sans';
   font-style: normal;
   font-display: swap;
-  src: url(../fonts/) format("woff2");
+  src: url(../fonts/FiraSans-Regular.ttf) format("woff2");
 
-} */
+}
