--- a/src/output.css
+++ b/src/output.css
@@ -1,4 +1,5 @@
 /*! tailwindcss v4.1.11 | MIT License | https://tailwindcss.com */
+@layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
@@ -9,23 +10,17 @@
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --text-sm: 0.875rem;
-    --text-sm--line-height: calc(1.25 / 0.875);
-    --text-xl: 1.25rem;
-    --text-xl--line-height: calc(1.75 / 1.25);
-    --text-2xl: 1.5rem;
-    --text-2xl--line-height: calc(2 / 1.5);
     --font-weight-medium: 500;
-    --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --radius-md: 0.375rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
-    --aspect-video: 16 / 9;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
+    --color-main: #000;
+    --color-yellow: #ffd301;
   }
 }
 @layer base {
@@ -173,4 +168,637 @@
     display: none !important;
   }
 }
-@layer utilities;
+@layer utilities {
+  .absolute {
+    position: absolute;
+  }
+  .relative {
+    position: relative;
+  }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
+  .top-\[80\%\] {
+    top: 80%;
+  }
+  .top-\[90\%\/\] {
+    top: 90%/;
+  }
+  .top-\[90\%\] {
+    top: 90%;
+  }
+  .top-\[100\%\] {
+    top: 100%;
+  }
+  .top-\[120\%\] {
+    top: 120%;
+  }
+  .top-\[120\] {
+    top: 120;
+  }
+  .top-\[150\%\] {
+    top: 150%;
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
+  .left-5 {
+    left: calc(var(--spacing) * 5);
+  }
+  .left-\[-20\] {
+    left: -20;
+  }
+  .left-\[-80px\] {
+    left: -80px;
+  }
+  .left-\[-82px\] {
+    left: -82px;
+  }
+  .left-\[-90px\] {
+    left: -90px;
+  }
+  .left-\[-100px\] {
+    left: -100px;
+  }
+  .left-\[-150px\] {
+    left: -150px;
+  }
+  .left-\[-200px\] {
+    left: -200px;
+  }
+  .left-\[380px\] {
+    left: 380px;
+  }
+  .left-\[400px\] {
+    left: 400px;
+  }
+  .left-\[480px\] {
+    left: 480px;
+  }
+  .left-\[500px\] {
+    left: 500px;
+  }
+  .left-\[510px\] {
+    left: 510px;
+  }
+  .left-\[520px\] {
+    left: 520px;
+  }
+  .left-\[600px\] {
+    left: 600px;
+  }
+  .z-50 {
+    z-index: 50;
+  }
+  .z-\[999\] {
+    z-index: 999;
+  }
+  .container {
+    width: 100%;
+    @media (width >= 480px) {
+      max-width: 480px;
+    }
+    @media (width >= 768px) {
+      max-width: 768px;
+    }
+    @media (width >= 1024px) {
+      max-width: 1024px;
+    }
+    @media (width >= 1200px) {
+      max-width: 1200px;
+    }
+    @media (width >= 1260px) {
+      max-width: 1260px;
+    }
+    @media (width >= 40rem) {
+      max-width: 40rem;
+    }
+    @media (width >= 48rem) {
+      max-width: 48rem;
+    }
+    @media (width >= 64rem) {
+      max-width: 64rem;
+    }
+    @media (width >= 96rem) {
+      max-width: 96rem;
+    }
+  }
+  .mx-auto {
+    margin-inline: auto;
+  }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
+  }
+  .block {
+    display: block;
+  }
+  .flex {
+    display: flex;
+  }
+  .hidden {
+    display: none;
+  }
+  .size-fit {
+    width: fit-content;
+    height: fit-content;
+  }
+  .size-full {
+    width: 100%;
+    height: 100%;
+  }
+  .h-0 {
+    height: calc(var(--spacing) * 0);
+  }
+  .h-\[100\%\] {
+    height: 100%;
+  }
+  .h-\[200px\] {
+    height: 200px;
+  }
+  .h-\[337px\] {
+    height: 337px;
+  }
+  .h-\[345px\] {
+    height: 345px;
+  }
+  .h-\[350px\] {
+    height: 350px;
+  }
+  .h-\[355px\] {
+    height: 355px;
+  }
+  .h-\[357px\] {
+    height: 357px;
+  }
+  .h-\[358px\] {
+    height: 358px;
+  }
+  .h-\[360px\] {
+    height: 360px;
+  }
+  .h-\[707\] {
+    height: 707;
+  }
+  .h-\[707px\] {
+    height: 707px;
+  }
+  .h-\[730px\] {
+    height: 730px;
+  }
+  .h-\[735px\] {
+    height: 735px;
+  }
+  .h-\[750px\] {
+    height: 750px;
+  }
+  .h-\[max-c\] {
+    height: max-c;
+  }
+  .h-\[max-content\] {
+    height: max-content;
+  }
+  .h-\[max\] {
+    height: max;
+  }
+  .h-full {
+    height: 100%;
+  }
+  .max-h-\[707\] {
+    max-height: 707;
+  }
+  .max-h-\[707px\] {
+    max-height: 707px;
+  }
+  .min-h-\[500px\] {
+    min-height: 500px;
+  }
+  .min-h-\[707px\] {
+    min-height: 707px;
+  }
+  .min-h-\[1000px\] {
+    min-height: 1000px;
+  }
+  .min-h-\[1024px\] {
+    min-height: 1024px;
+  }
+  .w-\[20\] {
+    width: 20;
+  }
+  .w-\[30\%\] {
+    width: 30%;
+  }
+  .w-\[31\%\] {
+    width: 31%;
+  }
+  .w-\[32\%\] {
+    width: 32%;
+  }
+  .w-\[32\] {
+    width: 32;
+  }
+  .w-\[60\%\] {
+    width: 60%;
+  }
+  .w-\[70\%\] {
+    width: 70%;
+  }
+  .w-\[100px\] {
+    width: 100px;
+  }
+  .w-\[150px\] {
+    width: 150px;
+  }
+  .w-\[180px\] {
+    width: 180px;
+  }
+  .w-\[200px\] {
+    width: 200px;
+  }
+  .w-\[207px\] {
+    width: 207px;
+  }
+  .w-full {
+    width: 100%;
+  }
+  .min-w-\[707px\] {
+    min-width: 707px;
+  }
+  .min-w-\[1024px\] {
+    min-width: 1024px;
+  }
+  .cursor-pointer {
+    cursor: pointer;
+  }
+  .touch-pan-left {
+    --tw-pan-x: pan-left;
+    touch-action: var(--tw-pan-x,) var(--tw-pan-y,) var(--tw-pinch-zoom,);
+  }
+  .columns-2 {
+    columns: 2;
+  }
+  .columns-3 {
+    columns: 3;
+  }
+  .flex-col {
+    flex-direction: column;
+  }
+  .content-between {
+    align-content: space-between;
+  }
+  .items-center {
+    align-items: center;
+  }
+  .items-start {
+    align-items: flex-start;
+  }
+  .justify-around {
+    justify-content: space-around;
+  }
+  .justify-between {
+    justify-content: space-between;
+  }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
+  .gap-2 {
+    gap: calc(var(--spacing) * 2);
+  }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
+  }
+  .gap-6 {
+    gap: calc(var(--spacing) * 6);
+  }
+  .gap-8 {
+    gap: calc(var(--spacing) * 8);
+  }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
+  }
+  .overflow-hidden {
+    overflow: hidden;
+  }
+  .overflow-y-scroll {
+    overflow-y: scroll;
+  }
+  .rounded-2xl {
+    border-radius: var(--radius-2xl);
+  }
+  .rounded-md {
+    border-radius: var(--radius-md);
+  }
+  .rounded-xl {
+    border-radius: var(--radius-xl);
+  }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .border-e {
+    border-inline-end-style: var(--tw-border-style);
+    border-inline-end-width: 1px;
+  }
+  .border-t {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 1px;
+  }
+  .border-t-0 {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 0px;
+  }
+  .border-r {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 1px;
+  }
+  .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
+  .border-l {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 1px;
+  }
+  .border-l-0 {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 0px;
+  }
+  .border-white {
+    border-color: var(--color-white);
+  }
+  .bg-\[\#0b0d1c\] {
+    background-color: #0b0d1c;
+  }
+  .bg-\[\#3a10e5\] {
+    background-color: #3a10e5;
+  }
+  .bg-\[\#10\] {
+    background-color: #10;
+  }
+  .bg-\[\#10162f\] {
+    background-color: #10162f;
+  }
+  .bg-\[\#\] {
+    background-color: #;
+  }
+  .bg-main {
+    background-color: var(--color-main);
+  }
+  .bg-white {
+    background-color: var(--color-white);
+  }
+  .bg-yellow {
+    background-color: var(--color-yellow);
+  }
+  .p-1 {
+    padding: calc(var(--spacing) * 1);
+  }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
+  .p-\[6px\] {
+    padding: 6px;
+  }
+  .p-\[20px\] {
+    padding: 20px;
+  }
+  .p-\[24px\] {
+    padding: 24px;
+  }
+  .p-\[32px\] {
+    padding: 32px;
+  }
+  .p-\[42px\] {
+    padding: 42px;
+  }
+  .p-\[44px\] {
+    padding: 44px;
+  }
+  .p-\[45px\] {
+    padding: 45px;
+  }
+  .p-\[48px\] {
+    padding: 48px;
+  }
+  .p-\[50px\] {
+    padding: 50px;
+  }
+  .p-\[55px\] {
+    padding: 55px;
+  }
+  .p-\[60px\] {
+    padding: 60px;
+  }
+  .p-\[62px\] {
+    padding: 62px;
+  }
+  .p-\[65px\] {
+    padding: 65px;
+  }
+  .p-\[70px\] {
+    padding: 70px;
+  }
+  .px-2 {
+    padding-inline: calc(var(--spacing) * 2);
+  }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
+  }
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
+  }
+  .px-\[20px\] {
+    padding-inline: 20px;
+  }
+  .px-\[24px\] {
+    padding-inline: 24px;
+  }
+  .px-\[32px\] {
+    padding-inline: 32px;
+  }
+  .px-\[48\] {
+    padding-inline: 48;
+  }
+  .px-\[48px\] {
+    padding-inline: 48px;
+  }
+  .py-0\.5 {
+    padding-block: calc(var(--spacing) * 0.5);
+  }
+  .py-1 {
+    padding-block: calc(var(--spacing) * 1);
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
+  }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
+  }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
+  .py-\[10px\] {
+    padding-block: 10px;
+  }
+  .py-\[12px\] {
+    padding-block: 12px;
+  }
+  .py-\[16px\] {
+    padding-block: 16px;
+  }
+  .py-\[20px\] {
+    padding-block: 20px;
+  }
+  .py-\[21px\] {
+    padding-block: 21px;
+  }
+  .py-\[24px\] {
+    padding-block: 24px;
+  }
+  .py-\[32px\] {
+    padding-block: 32px;
+  }
+  .py-\[40px\] {
+    padding-block: 40px;
+  }
+  .pb-1 {
+    padding-bottom: calc(var(--spacing) * 1);
+  }
+  .pb-2 {
+    padding-bottom: calc(var(--spacing) * 2);
+  }
+  .text-\[10px\] {
+    font-size: 10px;
+  }
+  .text-\[14px\] {
+    font-size: 14px;
+  }
+  .text-\[20px\] {
+    font-size: 20px;
+  }
+  .text-\[25px\] {
+    font-size: 25px;
+  }
+  .font-bold {
+    --tw-font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
+  }
+  .font-medium {
+    --tw-font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-medium);
+  }
+  .text-\[\#3a10\] {
+    color: #3a10;
+  }
+  .text-\[\#3a10e5\] {
+    color: #3a10e5;
+  }
+  .text-\[\#3a\] {
+    color: #3a;
+  }
+  .text-\[\#\] {
+    color: #;
+  }
+  .text-\[10p\] {
+    color: 10p;
+  }
+  .text-black {
+    color: var(--color-black);
+  }
+  .text-white {
+    color: var(--color-white);
+  }
+  .text-yellow {
+    color: var(--color-yellow);
+  }
+  .transition-all {
+    transition-property: all;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .duration-300 {
+    --tw-duration: 300ms;
+    transition-duration: 300ms;
+  }
+  .duration-500 {
+    --tw-duration: 500ms;
+    transition-duration: 500ms;
+  }
+  .group-hover\:block {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        display: block;
+      }
+    }
+  }
+  .hover\:bg-\[\#cca902\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #cca902;
+      }
+    }
+  }
+  .hover\:text-yellow {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-yellow);
+      }
+    }
+  }
+  .s\:gap-8 {
+    @media (width >= 768px) {
+      gap: calc(var(--spacing) * 8);
+    }
+  }
+  .l\:block {
+    @media (width >= 1200px) {
+      display: block;
+    }
+  }
+  .l\:hidden {
+    @media (width >= 1200px) {
+      display: none;
+    }
+  }
+  .l\:gap-8 {
+    @media (width >= 1200px) {
+      gap: calc(var(--spacing) * 8);
+    }
+  }
+}
+@property --tw-pan-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-pan-y {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-pinch-zoom {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
+@layer properties {
+  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
+    *, ::before, ::after, ::backdrop {
+      --tw-pan-x: initial;
+      --tw-pan-y: initial;
+      --tw-pinch-zoom: initial;
+      --tw-border-style: solid;
+      --tw-font-weight: initial;
+      --tw-duration: initial;
+    }
+  }
+}
