--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
-*{
+*:not(pre) {
   font-family: "Nunito", sans-serif;
 }
+
 @media only screen and (min-width:1300px){
     .container{
       max-width: 1300px;
